# qt-thread-sqlite

./: CMakeLists.txt  GlobleApp.cpp  GlobleApp.h  README.md  Student.cpp  Student.h  StudentQuery.cpp  StudentQuery.h  main.cpp
threaddblib/: CMakeLists.txt  ThreadSqlQuery.cpp  ThreadSqlQuery.h  ThreadSqlQueryInterface.cpp  ThreadSqlQueryInterface.h  ThreadSqlRes.cpp  ThreadSqlRes.h  ThreadSqlite.cpp  ThreadSqlite.h  ThreadSqliteObject.cpp  ThreadSqliteObject.h
